--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
@@ -294,12 +294,6 @@
                                                         </tr>
                                                     }
                                                 }
-                                                else
-                                                {
-                                                    <tr>
-                                                        <td colspan="3"><center>Data not available!</center></td>
-                                                    </tr>
-                                                }
                                             }
                                         </tbody>
                                     </table>
@@ -397,6 +391,16 @@
 
     <script>
         $(document).ready(function(){
+            $('#tblDocuments').DataTable({
+                language: {
+                    searchPlaceholder: 'Search...',
+                    sSearch: '',
+                }
+            });
+            $('.even').addClass("bg-light-transparent");
+            $('.odd').removeClass("bg-light-transparent");
+
+
             setTab();
         });
         const setTab = ()=>{
