--- a/MODAMSWeb/Areas/Users/Views/Assets/CreateAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/CreateAsset.cshtml
@@ -226,7 +226,7 @@
                 </div>
                 <div class="row p-5">
                     <div class="btn-list">
-                        <button id="btnSubmit" class="btn btn-primary"><i class="fe fe-check-circle"></i> Save Asset</button>
+                        <button id="btnSubmit" class="btn btn-primary"> Save Asset</button>
                         <a asp-action="Index" asp-controller="Assets" asp-route-id="@TempData["storeId"]" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
                     </div>
                 </div>
