--- a/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
@@ -167,7 +167,7 @@
                             </tbody>
                         </table>
                         <a asp-area="Users" asp-controller="Assets" asp-action="Index" asp-route-id="@TempData["storeId"]"
-                            class="btn btn-primary trShadow mt-3">
+                            class="btn btn-primary-gradient trShadow mt-3">
                             <i class="fe fe-list"></i>&nbsp;Asset List
                         </a>
                     </div>
