--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -142,9 +142,9 @@
         setMode();
         loadProfileData();
 
-        $('.page-link').on("click", (e)=>{
-            formatTables();
-        });
+        //$('.page-link').on("click", (e)=>{
+        //    formatTables();
+        //});
 
         formatTables();
         
