--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -39,6 +39,28 @@
             border: 1px solid lightblue;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2), 0px 6px 20px 0px rgba(0,0,0,0.19);
         }
+
+        .form-control {
+            border-color: #ced4da;
+        }
+
+            .form-control:focus {
+                border-color: green;
+                border: 1px solid lightblue;
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2), 0px 6px 20px 0px rgba(0,0,0,0.19);
+            }
+
+        .select2:focus {
+            border-color: green;
+            border: 1px solid lightblue;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2), 0px 6px 20px 0px rgba(0,0,0,0.19);
+        }
+
+        .form-control:disabled {
+            background-color: #e9ecef;
+            opacity: 1;
+        }
+
     </style>
 
 </head>
