--- a/MODAMSWeb/Areas/Users/Views/Assets/CreateAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/CreateAsset.cshtml
@@ -27,8 +27,8 @@
 <div class="row">
     <div class="col-lg-12 col-md-12">
         <div class="card">
-            <div class="card-header border-bottom">
-                <h4 class="mb-0">Asset Details</h4>
+            <div class="card-header border-bottom bg-primary-gradient divShadow">
+                <h4 class="mb-0 text-white">Asset Details</h4>
             </div>
             <div class="card-body p-0">
                 <div class="row p-5 border-bottom">
