--- a/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
@@ -27,8 +27,8 @@
 <div class="row">
     <div class="col-lg-12 col-md-12">
         <div class="card">
-            <div class="card-header border-bottom">
-                <h4 class="mb-0">Asset Details</h4>
+            <div class="card-header border-bottom bg-primary-gradient divShadow">
+                <h4 class="mb-0 text-white">Asset Details</h4>
             </div>
             <div class="card-body p-0">
                 <div class="row p-5 border-bottom">
@@ -47,7 +47,6 @@
                                             <label asp-for="CategoryId"></label>
                                             <select asp-for="CategoryId" asp-items="@Model.Categories"
                                                     class="form-control select2 form-select">
-                                                
                                             </select>
                                             <span asp-validation-for="CategoryId" class="text-danger"></span>
                                         </div>
@@ -57,7 +56,6 @@
                                             <label asp-for="SubCategoryId"></label>
                                             <select asp-for="SubCategoryId" asp-items="@Model.SubCategories"
                                                     class="form-control select2 form-select">
-                                                
                                             </select>
                                             <span asp-validation-for="SubCategoryId" class="text-danger"></span>
                                         </div>
@@ -228,8 +226,8 @@
                 <div class="row p-5">
                     <div class="btn-list">
                         <button id="btnSubmit" class="btn btn-primary">Save Changes</button>
-                        <a asp-action="Index" asp-controller="Assets" asp-route-id="@TempData["storeId"]" 
-                        id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                        <a asp-action="Index" asp-controller="Assets" asp-route-id="@TempData["storeId"]"
+                           id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
                     </div>
                 </div>
             </div>
@@ -323,27 +321,27 @@
                 var categoryId = getCategoryId();
 
                 Data.forEach((e) => {
-                    if(categoryId==e.Id){
+                    if (categoryId == e.Id) {
                         sHtml += '<option selected value="' + e.Id + '">' + e.CategoryName + '</option>';
-                    }else{
+                    } else {
                         sHtml += '<option value="' + e.Id + '">' + e.CategoryName + '</option>';
                     }
-                    
+
                 })
 
                 $("#CategoryId").html("").html(sHtml);
                 checkIfVehiclesSelected();
             }
         }
-        const getCategoryId = ()=>{
+        const getCategoryId = () => {
             var id = $("#SubCategoryId").val();
             var sData = $("#dvSubCategoryData").html();
             var nCategId = 0;
-            
+
             if (sData != "No Records Found") {
                 var Data = JSON.parse(sData);
-                Data.forEach((e)=>{
-                    if(e.Id==id){
+                Data.forEach((e) => {
+                    if (e.Id == id) {
                         nCategId = e.CategoryId;
                     }
                 });
