Modification and design changes

--- a/MODAMSWeb/Areas/Admin/Views/Categories/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Categories/Index.cshtml
@@ -215,12 +215,12 @@
                 var nCounter = 0;
                 var sCounter = "";
                 var sHtml = `<table id="tblSubCategories" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
-                                <thead class="table-head">
+                                <thead class="table-head bg-primary-gradient ms-auto divShadow">
                                     <tr>
-                                        <th class="bg-transparent border-bottom-0 w-5">S.No</th>
-                                        <th class="bg-transparent border-bottom-0">Sub Category Name</th>
-                                        <th class="bg-transparent border-bottom-0">Life Span (Months)</th>
-                                        <th class="bg-transparent border-bottom-0 no-btn">Action</th>
+                                        <th class="text-white bg-transparent border-bottom-0 w-5">S.No</th>
+                                        <th class="text-white bg-transparent border-bottom-0">Sub Category Name</th>
+                                        <th class="text-white bg-transparent border-bottom-0">Life Span (Months)</th>
+                                        <th class="text-white bg-transparent border-bottom-0 no-btn">Action</th>
                                     </tr>
                                 </thead>
 
