--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetPictures.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetPictures.cshtml
@@ -1,4 +1,11 @@
 ﻿@model List<MODAMS.Models.AssetPicture>
+
+<style>
+    .input-group {
+        display: flex;
+        align-items: center;
+    }
+</style>
 <div class="page-header">
     <div>
         <h1 class="page-title">Asset Information</h1>
@@ -14,20 +21,35 @@
     </div>
 </div>
 <div class="row">
+    <div class="col-md-12">
+        <div class="card divShadow">
+            <div class="card-body p-4">
+                <div class="d-flex align-items-center justify-content-between">
+                    <h4 class="m-0">@TempData["assetInfo"]</h4>
+                    <div class="d-sm-flex align-items-center">
+                        <div class="btn-list mx-4">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="col-sm-12 col-md-12 col-xl-12">
         <div class="card">
             <div class="card-body">
                 <form method="post" asp-action="UploadPicture" enctype="multipart/form-data">
                     <input type="hidden" id="AssetId" name="AssetId" value="@TempData["assetId"]" />
                     <div class="row">
-                        <div class="col-sm-5 col-md-5 col-xl-5">
+                        <div class="col-sm-6 col-md-6 col-xl-6">
                             <div class="form-group">
-                                <input class="form-control file-input form-control-sm" type="file" id="file" name="file">
-                            </div>
-                        </div>
-                        <div class="col-sm-5 col-md-5 col-xl-5">
-                            <div class="form-group">
-                                <button class="btn btn-primary btn-sm"><i class="fa fa-solid fa-upload"></i> Upload</button>
+                                <label class="form-label">Choose picture to upload</label>
+                                <div class="input-group">
+                                    <input class="form-control file-input form-control-sm" type="file" id="file" name="file" required accept="image/*">
+                                    <button class="btn btn-primary btn-sm"><i class="fa fa-solid fa-upload"></i> Upload</button>
+                                </div>
+                                <div class="invalid-feedback">
+                                    Please choose a picture to upload.
+                                </div>
                             </div>
                         </div>
                     </div>
