--- a/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
@@ -10,7 +10,7 @@
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
-        <h1 class="page-title">New Asset</h1>
+        <h1 class="page-title">Edit Asset</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
